<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblWarningTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/warning_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/lblBlank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/disclaimer_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/lblBlank2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_string"
        android:onClick="agreePress" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disagree_string"
        android:onClick="disagreePress" />
</LinearLayout>